fix: Resolve registerClick argument type and replace remaining new URL constructors in ModrinthApiHandler